# ros2_new_ws

./: .gitignore  bag_to_pcd_open3d.py  bag_to_pcd_ros2.py  run_inference.py  run_rosbag_inference.py  visualize_lidar_offscreen.py  visualize_open3d.py  visualize_open3d_offscreen.py
bags/: metadata.yaml  metadata.yaml:Zone.Identifier  qos_policy.yaml  rosbag2_2025_07_31-17_24_16_0.db3:Zone.Identifier
bags/pcd_output/: frame_0000.pcd  frame_0001.pcd  frame_0002.pcd  frame_0003.pcd  frame_0004.pcd  frame_0005.pcd  frame_0006.pcd  frame_0007.pcd  frame_0008.pcd  frame_0009.pcd  frame_0010.pcd  frame_0011.pcd  frame_0012.pcd  frame_0013.pcd  frame_0014.pcd  frame_0015.pcd  frame_0016.pcd  frame_0017.pcd  frame_0018.pcd  frame_0019.pcd  frame_0020.pcd  frame_0021.pcd  frame_0022.pcd  frame_0023.pcd  frame_0024.pcd  frame_0025.pcd  frame_0026.pcd  frame_0027.pcd  frame_0028.pcd  frame_0029.pcd  frame_0030.pcd  frame_0031.pcd  frame_0032.pcd  frame_0033.pcd  frame_0034.pcd  frame_0035.pcd  frame_0036.pcd  frame_0037.pcd  frame_0038.pcd  frame_0039.pcd  (+79 more)
cpp_pubsub/: package.xml
demo/: custom_pcd_demo.py  show_lidar_output.py
outputs/preds/: 000008.json
ros2_ws_src/lidar_processing/: CMakeLists.txt  package.xml
ros2_ws_src/lidar_processing/src/: clustering_node.cpp  filter_node.cpp  segmentation_node.cpp
ros2_ws_src/my_robot_controller/: package.xml  setup.py
ros2_ws_src/my_robot_controller/my_robot_controller/: my_first_node.py
