<?xml version="1.0"?>
<package format="3">
  <name>lidar_processing</name>
  <version>0.0.1</version>
  <description>LiDAR processing package in C++</description>
  <maintainer email="anjalisharmmaa26@gmail.com">Anjali Sharma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
